--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 8080",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -34,4 +34,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+  "engines": {
+  "node": "22.x"
+}
 }
